--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="loading-bar.min.css" />
+    <link rel="stylesheet" type="text/css" href="./thisis .css" />
 
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
@@ -16,66 +17,10 @@
     ></script>
     <title>Suman Kumar</title>
 
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      .ldBar-label {
-        color: white;
-        font-family: "varela round";
-        font-size: 20px;
-      }
-      .ldBar path.mainline {
-        stroke-width: 10;
-        stroke: rgb(0, 255, 221);
-        stroke-linecap: round;
-      }
-      .ldBar path.mainline {
-        stroke-width: 5;
-      }
-      /* .ldBar path.baseline {
-        stroke-width: 14;
-        stroke: #f1f2f3;
-        stroke-linecap: round;
-        filter: url(#custom-shadow);
-      } */
-
-      .ser-imagea {
-        background: url(./icons.png) no-repeat -1px -339px;
-        width: 190px;
-        height: 190px;
-        display: block;
-        margin: 0 auto;
-      }
-      .ser-imageb {
-        background: url(./icons.png) no-repeat -390px -150px;
-        width: 190px;
-        height: 190px;
-        display: block;
-        margin: 0 auto;
-      }
-      .ser-imagec {
-        background: url(./icons.png) no-repeat -195px -149px;
-        width: 190px;
-        height: 190px;
-        display: block;
-        margin: 0 auto;
-      }
-      .ser-imaged {
-        background: url(./icons.png) no-repeat -1px -143px;
-        width: 190px;
-        height: 190px;
-        display: block;
-        margin: 0 auto;
-      }
-    </style>
+    <style></style>
   </head>
   <body class="bg-gray-100">
-    <section
-      class="h-screen bg-gradient-to-b from-green-400 to-green-200 flex items-center justify-center"
-      id="home"
-    >
+    <section class="h-screen flex items-center justify-center" id="home">
       <div class="flex flex-wrap items-center justify-around lg:w-3/4 md:w-6/8">
         <div class="">
           <div class="p-1 border-2 border-white rounded-full">
@@ -84,13 +29,13 @@
         </div>
         <div class="text-center m-10">
           <h2
-            class="lg:text-7xl md:text-5xl text-xl text-green-900 m-2 antialiased"
+            class="lg:text-7xl md:text-5xl text-xl text-white m-2 antialiased"
           >
             I'M SUMAN KUMAR
           </h2>
-          <h2 class="antialiased text-green-800">WEB & APP DEVELOPER</h2>
+          <h2 class="antialiased text-gray-100">WEB & APP DEVELOPER</h2>
           <button
-            class="border-2 border-white p-3 text-white focus:outline-none hover:text-green-700 hover:border-green-700 m-5"
+            class="border-2 border-white p-3 text-white focus:outline-none hover:text-green-700 hover:border-white hover:bg-white duration-500 m-5"
           >
             Download my Resume
           </button>
@@ -101,10 +46,10 @@
       class="h-screen flex flex-col items-center justify-around"
       id="about"
     >
-      <h1 class="text-center text-5xl m-5">ABOUT ME</h1>
+      <h1 class="text-center text-5xl m-5 heading-text">ABOUT ME</h1>
       <p class="text-center w-3/4">
-        Hie I am Suman Kumar Student B.tech last Year. I started freelancing 2
-        years before now I am working as full time freelancer while searching
+        Hie I am Suman Kumar, Student of B.tech last Year. I started freelancing
+        2 years before now I am working as full time freelancer while searching
         for the suitable job. So I will help you make your own dream website or
         application. Currently working from home, always ready to talk regarding
         projects feel free to contact me. Hiring me will worth your time. Likes
@@ -121,7 +66,11 @@
       </div>
     </section>
     <section class="" id="skills">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1440 320"
+        class="-mt-20"
+      >
         <path
           fill="#00cba9"
           fill-opacity="1"
@@ -132,8 +81,12 @@
         class="flex items-center justify-around flex-col"
         style="background-color: #00cba9"
       >
-        <h1 class="text-center text-white text-5xl m-5">MY SKILLS</h1>
-        <div class="flex items-center text-center text-white flex-wrap">
+        <h1 class="text-center text-white text-5xl m-5 heading-text">
+          MY SKILLS
+        </h1>
+        <div
+          class="flex items-center text-center text-white flex-wrap justify-center"
+        >
           <div class="">
             <div
               class="ldBar label-center m-4"
@@ -202,9 +155,11 @@
         ></path>
       </svg>
     </section>
-    <section class="" id="education">
+    <section class="-mt-20" id="education">
       <div class="">
-        <h1 class="text-center md:text-5xl text-2xl">EDUCATION</h1>
+        <h1 class="text-center py-10 md:text-5xl text-2xl heading-text">
+          EDUCATION
+        </h1>
         <div class="grid md:grid-cols-3 grid-cols-1 text-center m-5 gap-4">
           <div class="bg-white rounded md:p-10 shadow-md">
             <h1 class="border-b text-gray-600 text-left px-3 py-1">
@@ -233,7 +188,9 @@
       </svg>
     </section>
     <section class="" style="background-color: #0099ff" id="services">
-      <h1 class="text-center text-2xl md:text-5xl text-white -mt-20 pb-10">
+      <h1
+        class="text-center text-2xl md:text-5xl text-white -mt-20 pb-10 heading-text"
+      >
         SERVICES
       </h1>
       <div class="grid grid-cols-1 md:grid-cols-4 p-5 text-center gap-4">
@@ -287,7 +244,7 @@
         ></path>
       </svg>
       <div class="flex items-center justify-center flex-col">
-        <h1 class="text-5xl text-center pb-10">CONTACT</h1>
+        <h1 class="text-5xl text-center pb-10 heading-text">CONTACT</h1>
         <div
           class="w-3/4 grid grid-cols-1 md:grid-cols-2 gap-5 bg-white rounded shadow-md"
         >
